md_parser/src/snapshots/md_parser__lexer__tests__tokenize_markdown.snap
---
source: md_parser/src/lexer.rs
expression: lexer.scan()
input_file: md_parser/src/snapshot_inputs/lexer_input.md
---
[
  [
    "Hash",
    {
      "line": 1,
      "col": 1
    }
  ],
  [
    "Space",
    {
      "line": 1,
      "col": 2
    }
  ],
  [
    {
      "Text": "Hi"
    },
    {
      "line": 1,
      "col": 4
    }
  ],
  [
    "Space",
    {
      "line": 1,
      "col": 5
    }
  ],
  [
    {
      "Text": "there"
    },
    {
      "line": 1,
      "col": 10
    }
  ],
  [
    "Newline",
    {
      "line": 2,
      "col": 0
    }
  ],
  [
    "Newline",
    {
      "line": 3,
      "col": 0
    }
  ],
  [
    {
      "Text": "This"
    },
    {
      "line": 3,
      "col": 4
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 5
    }
  ],
  [
    {
      "Text": "should"
    },
    {
      "line": 3,
      "col": 11
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 12
    }
  ],
  [
    {
      "Text": "be"
    },
    {
      "line": 3,
      "col": 14
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 15
    }
  ],
  [
    {
      "Text": "text"
    },
    {
      "line": 3,
      "col": 19
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 20
    }
  ],
  [
    "Underscore",
    {
      "line": 3,
      "col": 21
    }
  ],
  [
    {
      "Text": "wrapped"
    },
    {
      "line": 3,
      "col": 28
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 29
    }
  ],
  [
    {
      "Text": "in"
    },
    {
      "line": 3,
      "col": 31
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 32
    }
  ],
  [
    {
      "Text": "underscore"
    },
    {
      "line": 3,
      "col": 42
    }
  ],
  [
    "Underscore",
    {
      "line": 3,
      "col": 43
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 44
    }
  ],
  [
    {
      "Text": "and"
    },
    {
      "line": 3,
      "col": 47
    }
  ],
  [
    "Space",
    {
      "line": 3,
      "col": 48
    }
  ],
  [
    "Backslash",
    {
      "line": 3,
      "col": 49
    }
  ],
  [
    "Backslash",
    {
      "line": 3,
      "col": 50
    }
  ],
  [
    {
      "Text": "escaped"
    },
    {
      "line": 3,
      "col": 57
    }
  ],
  [
    "Newline",
    {
      "line": 4,
      "col": 0
    }
  ],
  [
    "Star",
    {
      "line": 4,
      "col": 1
    }
  ],
  [
    "Star",
    {
      "line": 4,
      "col": 2
    }
  ],
  [
    {
      "Text": "bold"
    },
    {
      "line": 4,
      "col": 6
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 7
    }
  ],
  [
    {
      "Text": "text"
    },
    {
      "line": 4,
      "col": 11
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 12
    }
  ],
  [
    {
      "Text": "here"
    },
    {
      "line": 4,
      "col": 16
    }
  ],
  [
    "Star",
    {
      "line": 4,
      "col": 17
    }
  ],
  [
    "Star",
    {
      "line": 4,
      "col": 18
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 19
    }
  ],
  [
    {
      "Text": "with"
    },
    {
      "line": 4,
      "col": 23
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 24
    }
  ],
  [
    {
      "Text": "a"
    },
    {
      "line": 4,
      "col": 25
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 26
    }
  ],
  [
    {
      "Text": "nice"
    },
    {
      "line": 4,
      "col": 30
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 31
    }
  ],
  [
    "LeftSquareBracket",
    {
      "line": 4,
      "col": 32
    }
  ],
  [
    {
      "Text": "link"
    },
    {
      "line": 4,
      "col": 36
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 37
    }
  ],
  [
    {
      "Text": "here"
    },
    {
      "line": 4,
      "col": 41
    }
  ],
  [
    "RightSquareBracket",
    {
      "line": 4,
      "col": 42
    }
  ],
  [
    "LeftParen",
    {
      "line": 4,
      "col": 43
    }
  ],
  [
    {
      "Text": "https://bpaulino"
    },
    {
      "line": 4,
      "col": 59
    }
  ],
  [
    "Dot",
    {
      "line": 4,
      "col": 60
    }
  ],
  [
    {
      "Text": "com"
    },
    {
      "line": 4,
      "col": 63
    }
  ],
  [
    "RightParen",
    {
      "line": 4,
      "col": 64
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 65
    }
  ],
  [
    {
      "Text": "and"
    },
    {
      "line": 4,
      "col": 68
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 69
    }
  ],
  [
    {
      "Text": "text"
    },
    {
      "line": 4,
      "col": 73
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 74
    }
  ],
  [
    {
      "Text": "after"
    },
    {
      "line": 4,
      "col": 79
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 80
    }
  ],
  [
    {
      "Text": "the"
    },
    {
      "line": 4,
      "col": 83
    }
  ],
  [
    "Space",
    {
      "line": 4,
      "col": 84
    }
  ],
  [
    {
      "Text": "link"
    },
    {
      "line": 4,
      "col": 88
    }
  ],
  [
    "Newline",
    {
      "line": 5,
      "col": 0
    }
  ],
  [
    "EndOfFile",
    {
      "line": 5,
      "col": 0
    }
  ]
]
